# TH-Suite

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MC-L10N-PROGRESS.md  OPTIMAL_ARCHITECTURE_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROJECT_STRUCTURE_REFACTOR.md  REACT19_COMPATIBILITY_REPORT.md  README.md  REFACTORING_SUMMARY.md  TH-Suite_Core-First适配升级方案.md  TH-Suite_修复需求文档.md  TODO.md  TROUBLESHOOTING.md  Taskfile.yml  V6_数据库设计审查报告.md  demo_logging.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quality-gate-report.json  start_desktop.bat  test_real_data_integration.html  test_scan.json  test_scan.py  test_scan_api.html  我的世界工具前端设计.md  我的世界工具架构数据库设计.md  白皮书.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/mc_l10n/: Taskfile.yml  __init__.py  cleanup.py  manage.sh  ports.config.json
apps/mc_l10n/backend/: README.md  STRUCTURE.md  TESTING_GUIDE.md  TODO.md  V6_EXTENSIONS.md  __init__.py  backfill_versions.py  blake3_migration_report.md  check_db.py  check_empty_tables.py  check_versions.py  cleanup_duplicates.py  clear_demo_data.py  database_redesign.py  ddd_scanner.py  debug_foreign_keys.py  debug_scanner_db.py  enterprise_upsert_scanner.py  full_scanner.py  infrastructure.py  init_clean_db.py  init_db.py  main.py  main_clean.py  mc_scan_results.json  pytest.ini  scanner_service.py  simple_backend.py  simple_logging.py  simple_scanner.py  start.py  start.sh  test_advanced_features.py  test_blake3_content_addressing.py  test_cache_functionality.py  test_entry_delta_database.py  test_extended_features.py  test_performance_optimizer.py  test_protobuf_service.py  test_real_scan.py  (+11 more)
apps/mc_l10n/backend/backup_20250906_123924/: ddd_scanner.py  fixed_scanner.py  folder_scanner.py  init_db.py  init_db_ddd.py  jar_scanner.py  upsert_scanner.py  view_db_simple.py
apps/mc_l10n/backend/core/: ddd_scanner.py  ddd_scanner_simple.py  di_container.py
apps/mc_l10n/backend/database/: README.md  __init__.py  database_api.py  db_cli.py  init_local_db.py  local_database_manager.py  offline_tracker.py  scan_service.py  sync_service.py
apps/mc_l10n/backend/infrastructure/: __init__.py  (+1 more)
apps/mc_l10n/frontend/: .prettierignore  .prettierrc.json  .tsbuildinfo  COMPONENTS.md  DEVELOPMENT.md  MIGRATION.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-new.html  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/mc_l10n/frontend/src-tauri/: Cargo.toml  config.json  tauri.conf.json
apps/mc_l10n/frontend/src-tauri/capabilities/: default.json
apps/mc_l10n/frontend/src-tauri/src/: config.rs  main.rs
apps/mc_l10n/scripts/: QUICK_REFERENCE.md  README.md  check_mods_table.py  cleanup.py  db_audit.py  db_reader.py  db_transfer.py  log_helper.py  manage.py  manager.py  mc_cli.py  mc_cli_complex_backup.py  mc_l10n.py  scan_manager.py  start-all-web.bat  start-all.bat  start-all.sh  start-backend.bat  start-backend.sh  start_audit.sh  start_backend.py  start_db_viewer.py  start_frontend.py  start_fullstack.py  stop-all.sh  test_scan.py  update_api_urls.sh
apps/rw_l10n/: Taskfile.yml
apps/rw_l10n/backend/: README.md  dependencies.py  main.py
archive/legacy_database/: README.md
docs/: 01-architecture-design-v2.0.0.md  03-minecraft-adapter-implementation.md  04-build-guide-tauri.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  TECH-STACK.md  error-logs.md  mc-domain-model-design.md  todo.md  记录.md  错误日志.md
docs/architecture/: requirements.md
docs/archive/mc-l10n/: README.md  database-architecture-v4.md  database-schema-v3.md
docs/operations/: error-logs.md  todo.md
docs/projects/mc-l10n/: API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  MIGRATION_GUIDE.md  README.md  TODO.md  USER_GUIDE.md
docs/user/: usage-guide.md
examples/: core-architecture-demo.py
locales/: README.md
locales/en/: common.json
locales/zh-CN/: common.json
scripts/: quality-gate.py  quick-check.sh
tests/adapters/: __init__.py
tests/adapters/minecraft/: __init__.py  test_minecraft_adapter.py
tests/core/: test_platform_integration.py  test_structlog_integration.py
tests/scenarios/: README.md
tests/scenarios/mc-l10n-basic/: README.md  manifest.yaml
tools/database/: start_db_manager.sh
tools/database/viewer/: mc_db_manager.py
tools/scripts/start/: start-frontend-web.bat  start-frontend.bat  start_audit.bat  stop-all.bat
(+503 files in other folders)
