[tool.poetry]
name = "th-suite"
version = "0.1.0"
description = "TransHub Tools - A toolkit for game/application localization"
authors = ["TransHub Team"]
readme = "README.md"
packages = [
    {include = "packages"},
    {include = "apps"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"
click = "^8.1.7"
structlog = "^23.2.0"
rich = "^13.7.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"
jsonschema = "^4.20.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.20"
aiohttp = "^3.12.15"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.12.11"
mypy = "^1.7.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
